--- a/StarWarsInfo/StarWarsInfo/Base.lproj/Main.storyboard
+++ b/StarWarsInfo/StarWarsInfo/Base.lproj/Main.storyboard
@@ -342,62 +342,62 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Classification" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X86-Re-h9Y">
+                                <rect key="frame" x="133" y="106" width="102" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="classificationUpdate" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7le-ga-QJo">
-                                <rect key="frame" x="22" y="141" width="331" height="21"/>
+                                <rect key="frame" x="16" y="126" width="331" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Designation" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VG7-y9-Aiq">
-                                <rect key="frame" x="142" y="164" width="91" height="21"/>
+                                <rect key="frame" x="139" y="145" width="91" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="designationUpdate" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qDV-Oy-Auk">
-                                <rect key="frame" x="115" y="188" width="145" height="21"/>
+                                <rect key="frame" x="112" y="164" width="145" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Average Height" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eDy-Qr-CrE">
-                                <rect key="frame" x="128" y="212" width="118" height="21"/>
+                                <rect key="frame" x="125" y="182" width="118" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="heightUpdate" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bm2-C5-lNA">
-                                <rect key="frame" x="29" y="234" width="310" height="21"/>
+                                <rect key="frame" x="26" y="199" width="311" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Skin Color" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aA9-Ld-HsL">
-                                <rect key="frame" x="145" y="258" width="79" height="21"/>
+                                <rect key="frame" x="139" y="217" width="79" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="skinColorUpdate" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zc7-Zy-BAW">
-                                <rect key="frame" x="29" y="279" width="310" height="21"/>
+                                <rect key="frame" x="29" y="235" width="311" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hair Color" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vy4-xg-JVA">
-                                <rect key="frame" x="146" y="300" width="77" height="21"/>
+                                <rect key="frame" x="141" y="255" width="77" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="hairUpdate" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qnt-kw-DUS">
-                                <rect key="frame" x="44" y="318" width="286" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Classification" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X86-Re-h9Y">
-                                <rect key="frame" x="133" y="106" width="102" height="21"/>
+                                <rect key="frame" x="35" y="272" width="287" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -405,40 +405,40 @@
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="Zc7-Zy-BAW" firstAttribute="leading" secondItem="bm2-C5-lNA" secondAttribute="leading" id="0rA-7Z-sF9"/>
-                            <constraint firstItem="aA9-Ld-HsL" firstAttribute="centerX" secondItem="bm2-C5-lNA" secondAttribute="centerX" id="15F-ah-fqj"/>
-                            <constraint firstItem="VG7-y9-Aiq" firstAttribute="top" secondItem="7le-ga-QJo" secondAttribute="bottom" constant="2" id="18y-c7-bZ8"/>
+                            <constraint firstItem="Zc7-Zy-BAW" firstAttribute="leading" secondItem="bm2-C5-lNA" secondAttribute="leading" constant="3" id="0rA-7Z-sF9"/>
+                            <constraint firstItem="aA9-Ld-HsL" firstAttribute="centerX" secondItem="bm2-C5-lNA" secondAttribute="centerX" constant="-3" id="15F-ah-fqj"/>
+                            <constraint firstItem="VG7-y9-Aiq" firstAttribute="top" secondItem="7le-ga-QJo" secondAttribute="bottom" constant="-2" id="18y-c7-bZ8"/>
                             <constraint firstItem="xsW-Nx-PBQ" firstAttribute="top" secondItem="QU3-tA-Sjj" secondAttribute="top" constant="357" id="1Jp-w4-WtX"/>
-                            <constraint firstItem="qnt-kw-DUS" firstAttribute="leading" secondItem="QU3-tA-Sjj" secondAttribute="leading" constant="44" id="2K2-wf-8dS"/>
-                            <constraint firstItem="7le-ga-QJo" firstAttribute="centerX" secondItem="X86-Re-h9Y" secondAttribute="centerX" constant="3.5" id="3Ta-rL-aRV"/>
+                            <constraint firstItem="qnt-kw-DUS" firstAttribute="leading" secondItem="QU3-tA-Sjj" secondAttribute="leading" constant="35" id="2K2-wf-8dS"/>
+                            <constraint firstItem="7le-ga-QJo" firstAttribute="centerX" secondItem="X86-Re-h9Y" secondAttribute="centerX" constant="-2.5" id="3Ta-rL-aRV"/>
                             <constraint firstItem="zJE-cE-8Op" firstAttribute="centerX" secondItem="QU3-tA-Sjj" secondAttribute="centerX" id="3Xi-uK-9he"/>
                             <constraint firstItem="xsW-Nx-PBQ" firstAttribute="leading" secondItem="QU3-tA-Sjj" secondAttribute="leading" id="4Nx-LV-Gvv"/>
                             <constraint firstItem="X86-Re-h9Y" firstAttribute="top" secondItem="azp-fj-9BI" secondAttribute="bottom" constant="-3" id="8w0-Tb-8Ka"/>
-                            <constraint firstItem="VG7-y9-Aiq" firstAttribute="centerX" secondItem="7le-ga-QJo" secondAttribute="centerX" id="B1W-76-o3n"/>
+                            <constraint firstItem="VG7-y9-Aiq" firstAttribute="centerX" secondItem="7le-ga-QJo" secondAttribute="centerX" constant="3" id="B1W-76-o3n"/>
                             <constraint firstItem="xsW-Nx-PBQ" firstAttribute="trailing" secondItem="QU3-tA-Sjj" secondAttribute="trailing" id="DRp-bE-y7Z"/>
-                            <constraint firstItem="vy4-xg-JVA" firstAttribute="top" secondItem="Zc7-Zy-BAW" secondAttribute="bottom" id="HxF-iR-uCl"/>
-                            <constraint firstItem="vy4-xg-JVA" firstAttribute="centerX" secondItem="Zc7-Zy-BAW" secondAttribute="centerX" id="IKF-yx-HTK"/>
-                            <constraint firstItem="Zc7-Zy-BAW" firstAttribute="centerX" secondItem="aA9-Ld-HsL" secondAttribute="centerX" id="JKa-wr-n6c"/>
-                            <constraint firstItem="bm2-C5-lNA" firstAttribute="leading" secondItem="QU3-tA-Sjj" secondAttribute="leading" constant="29" id="KDZ-br-OXo"/>
+                            <constraint firstItem="vy4-xg-JVA" firstAttribute="top" secondItem="Zc7-Zy-BAW" secondAttribute="bottom" constant="-1" id="HxF-iR-uCl"/>
+                            <constraint firstItem="vy4-xg-JVA" firstAttribute="centerX" secondItem="Zc7-Zy-BAW" secondAttribute="centerX" constant="-5" id="IKF-yx-HTK"/>
+                            <constraint firstItem="Zc7-Zy-BAW" firstAttribute="centerX" secondItem="aA9-Ld-HsL" secondAttribute="centerX" constant="6" id="JKa-wr-n6c"/>
+                            <constraint firstItem="bm2-C5-lNA" firstAttribute="leading" secondItem="QU3-tA-Sjj" secondAttribute="leading" constant="26" id="KDZ-br-OXo"/>
                             <constraint firstItem="xsW-Nx-PBQ" firstAttribute="bottom" secondItem="QU3-tA-Sjj" secondAttribute="bottom" id="QVy-OT-M6u"/>
                             <constraint firstItem="X86-Re-h9Y" firstAttribute="centerX" secondItem="azp-fj-9BI" secondAttribute="centerX" constant="-0.5" id="TPX-18-OuR"/>
                             <constraint firstItem="azp-fj-9BI" firstAttribute="leading" secondItem="QU3-tA-Sjj" secondAttribute="leading" constant="19" id="TYw-kT-l7c"/>
-                            <constraint firstItem="eDy-Qr-CrE" firstAttribute="centerX" secondItem="qDV-Oy-Auk" secondAttribute="centerX" id="WUN-LC-h4f"/>
-                            <constraint firstItem="qnt-kw-DUS" firstAttribute="top" secondItem="Zc7-Zy-BAW" secondAttribute="bottom" constant="18" id="Zwf-CG-PHQ"/>
+                            <constraint firstItem="eDy-Qr-CrE" firstAttribute="centerX" secondItem="qDV-Oy-Auk" secondAttribute="centerX" constant="-0.5" id="WUN-LC-h4f"/>
+                            <constraint firstItem="qnt-kw-DUS" firstAttribute="top" secondItem="Zc7-Zy-BAW" secondAttribute="bottom" constant="16" id="Zwf-CG-PHQ"/>
                             <constraint firstItem="azp-fj-9BI" firstAttribute="top" secondItem="zJE-cE-8Op" secondAttribute="bottom" constant="-3" id="dJt-ey-IGh"/>
                             <constraint firstItem="qDV-Oy-Auk" firstAttribute="centerX" secondItem="VG7-y9-Aiq" secondAttribute="centerX" id="eER-3w-AzJ"/>
-                            <constraint firstItem="qnt-kw-DUS" firstAttribute="centerX" secondItem="eDy-Qr-CrE" secondAttribute="centerX" id="gOt-oS-MO1"/>
-                            <constraint firstItem="Zc7-Zy-BAW" firstAttribute="top" secondItem="aA9-Ld-HsL" secondAttribute="bottom" id="gRh-i3-FP4"/>
-                            <constraint firstItem="qDV-Oy-Auk" firstAttribute="top" secondItem="VG7-y9-Aiq" secondAttribute="bottom" constant="3" id="hfo-is-CiF"/>
-                            <constraint firstItem="7le-ga-QJo" firstAttribute="top" secondItem="X86-Re-h9Y" secondAttribute="bottom" constant="14" id="mtf-1I-GfR"/>
+                            <constraint firstItem="qnt-kw-DUS" firstAttribute="centerX" secondItem="eDy-Qr-CrE" secondAttribute="centerX" constant="-5.5" id="gOt-oS-MO1"/>
+                            <constraint firstItem="Zc7-Zy-BAW" firstAttribute="top" secondItem="aA9-Ld-HsL" secondAttribute="bottom" constant="-3" id="gRh-i3-FP4"/>
+                            <constraint firstItem="qDV-Oy-Auk" firstAttribute="top" secondItem="VG7-y9-Aiq" secondAttribute="bottom" constant="-2" id="hfo-is-CiF"/>
+                            <constraint firstItem="7le-ga-QJo" firstAttribute="top" secondItem="X86-Re-h9Y" secondAttribute="bottom" constant="-1" id="mtf-1I-GfR"/>
                             <constraint firstItem="xsW-Nx-PBQ" firstAttribute="leading" secondItem="GXN-X2-PRe" secondAttribute="leading" id="ohN-sn-v1G"/>
-                            <constraint firstItem="eDy-Qr-CrE" firstAttribute="top" secondItem="qDV-Oy-Auk" secondAttribute="bottom" constant="3" id="sG7-r6-5yO"/>
-                            <constraint firstItem="aA9-Ld-HsL" firstAttribute="top" secondItem="bm2-C5-lNA" secondAttribute="bottom" constant="3" id="u4E-bA-mMj"/>
+                            <constraint firstItem="eDy-Qr-CrE" firstAttribute="top" secondItem="qDV-Oy-Auk" secondAttribute="bottom" constant="-3" id="sG7-r6-5yO"/>
+                            <constraint firstItem="aA9-Ld-HsL" firstAttribute="top" secondItem="bm2-C5-lNA" secondAttribute="bottom" constant="-3" id="u4E-bA-mMj"/>
                             <constraint firstItem="zJE-cE-8Op" firstAttribute="top" secondItem="QU3-tA-Sjj" secondAttribute="top" constant="6" id="upK-vL-XkU"/>
-                            <constraint firstItem="bm2-C5-lNA" firstAttribute="top" secondItem="eDy-Qr-CrE" secondAttribute="bottom" constant="1" id="w2h-rW-4ep"/>
-                            <constraint firstItem="bm2-C5-lNA" firstAttribute="centerX" secondItem="eDy-Qr-CrE" secondAttribute="centerX" constant="-3" id="xMl-52-H7I"/>
+                            <constraint firstItem="bm2-C5-lNA" firstAttribute="top" secondItem="eDy-Qr-CrE" secondAttribute="bottom" constant="-4" id="w2h-rW-4ep"/>
+                            <constraint firstItem="bm2-C5-lNA" firstAttribute="centerX" secondItem="eDy-Qr-CrE" secondAttribute="centerX" constant="-2.5" id="xMl-52-H7I"/>
                             <constraint firstItem="azp-fj-9BI" firstAttribute="centerX" secondItem="zJE-cE-8Op" secondAttribute="centerX" constant="-3" id="xgc-Gt-w7f"/>
-                            <constraint firstItem="7le-ga-QJo" firstAttribute="leading" secondItem="azp-fj-9BI" secondAttribute="leading" constant="3" id="yTM-LY-mPi"/>
+                            <constraint firstItem="7le-ga-QJo" firstAttribute="leading" secondItem="azp-fj-9BI" secondAttribute="leading" constant="-3" id="yTM-LY-mPi"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="QU3-tA-Sjj"/>
                     </view>
