--- a/StarWarsInfo/StarWarsInfo/Base.lproj/Main.storyboard
+++ b/StarWarsInfo/StarWarsInfo/Base.lproj/Main.storyboard
@@ -318,122 +318,7 @@
         <!--Star Wars Specie Detail View Controller-->
         <scene sceneID="naq-2Z-eN8">
             <objects>
-                <viewController id="uaS-Km-Wm8" customClass="StarWarsSpecieDetailViewController" customModule="StarWarsInfo" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="GXN-X2-PRe">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="images" translatesAutoresizingMaskIntoConstraints="NO" id="xsW-Nx-PBQ">
-                                <rect key="frame" x="0.0" y="421" width="375" height="246"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="246" id="MYk-no-9kJ"/>
-                                    <constraint firstAttribute="width" constant="375" id="Yju-dc-kzl"/>
-                                </constraints>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zJE-cE-8Op">
-                                <rect key="frame" x="165" y="70" width="45" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="nameUpdate" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="azp-fj-9BI">
-                                <rect key="frame" x="19" y="88" width="331" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Classification" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X86-Re-h9Y">
-                                <rect key="frame" x="133" y="106" width="102" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="classificationUpdate" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7le-ga-QJo">
-                                <rect key="frame" x="16" y="126" width="331" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Designation" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VG7-y9-Aiq">
-                                <rect key="frame" x="139" y="145" width="91" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="designationUpdate" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qDV-Oy-Auk">
-                                <rect key="frame" x="112" y="164" width="145" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Average Height" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eDy-Qr-CrE">
-                                <rect key="frame" x="125" y="182" width="118" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="heightUpdate" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bm2-C5-lNA">
-                                <rect key="frame" x="26" y="199" width="311" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Skin Color" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aA9-Ld-HsL">
-                                <rect key="frame" x="139" y="217" width="79" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="skinColorUpdate" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zc7-Zy-BAW">
-                                <rect key="frame" x="29" y="235" width="311" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hair Color" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vy4-xg-JVA">
-                                <rect key="frame" x="141" y="255" width="77" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="Zc7-Zy-BAW" firstAttribute="leading" secondItem="bm2-C5-lNA" secondAttribute="leading" constant="3" id="0rA-7Z-sF9"/>
-                            <constraint firstItem="aA9-Ld-HsL" firstAttribute="centerX" secondItem="bm2-C5-lNA" secondAttribute="centerX" constant="-3" id="15F-ah-fqj"/>
-                            <constraint firstItem="VG7-y9-Aiq" firstAttribute="top" secondItem="7le-ga-QJo" secondAttribute="bottom" constant="-2" id="18y-c7-bZ8"/>
-                            <constraint firstItem="xsW-Nx-PBQ" firstAttribute="top" secondItem="QU3-tA-Sjj" secondAttribute="top" constant="357" id="1Jp-w4-WtX"/>
-                            <constraint firstItem="7le-ga-QJo" firstAttribute="centerX" secondItem="X86-Re-h9Y" secondAttribute="centerX" constant="-2.5" id="3Ta-rL-aRV"/>
-                            <constraint firstItem="zJE-cE-8Op" firstAttribute="centerX" secondItem="QU3-tA-Sjj" secondAttribute="centerX" id="3Xi-uK-9he"/>
-                            <constraint firstItem="xsW-Nx-PBQ" firstAttribute="leading" secondItem="QU3-tA-Sjj" secondAttribute="leading" id="4Nx-LV-Gvv"/>
-                            <constraint firstItem="X86-Re-h9Y" firstAttribute="top" secondItem="azp-fj-9BI" secondAttribute="bottom" constant="-3" id="8w0-Tb-8Ka"/>
-                            <constraint firstItem="VG7-y9-Aiq" firstAttribute="centerX" secondItem="7le-ga-QJo" secondAttribute="centerX" constant="3" id="B1W-76-o3n"/>
-                            <constraint firstItem="xsW-Nx-PBQ" firstAttribute="trailing" secondItem="QU3-tA-Sjj" secondAttribute="trailing" id="DRp-bE-y7Z"/>
-                            <constraint firstItem="vy4-xg-JVA" firstAttribute="top" secondItem="Zc7-Zy-BAW" secondAttribute="bottom" constant="-1" id="HxF-iR-uCl"/>
-                            <constraint firstItem="vy4-xg-JVA" firstAttribute="centerX" secondItem="Zc7-Zy-BAW" secondAttribute="centerX" constant="-5" id="IKF-yx-HTK"/>
-                            <constraint firstItem="Zc7-Zy-BAW" firstAttribute="centerX" secondItem="aA9-Ld-HsL" secondAttribute="centerX" constant="6" id="JKa-wr-n6c"/>
-                            <constraint firstItem="bm2-C5-lNA" firstAttribute="leading" secondItem="QU3-tA-Sjj" secondAttribute="leading" constant="26" id="KDZ-br-OXo"/>
-                            <constraint firstItem="xsW-Nx-PBQ" firstAttribute="bottom" secondItem="QU3-tA-Sjj" secondAttribute="bottom" id="QVy-OT-M6u"/>
-                            <constraint firstItem="X86-Re-h9Y" firstAttribute="centerX" secondItem="azp-fj-9BI" secondAttribute="centerX" constant="-0.5" id="TPX-18-OuR"/>
-                            <constraint firstItem="azp-fj-9BI" firstAttribute="leading" secondItem="QU3-tA-Sjj" secondAttribute="leading" constant="19" id="TYw-kT-l7c"/>
-                            <constraint firstItem="eDy-Qr-CrE" firstAttribute="centerX" secondItem="qDV-Oy-Auk" secondAttribute="centerX" constant="-0.5" id="WUN-LC-h4f"/>
-                            <constraint firstItem="azp-fj-9BI" firstAttribute="top" secondItem="zJE-cE-8Op" secondAttribute="bottom" constant="-3" id="dJt-ey-IGh"/>
-                            <constraint firstItem="qDV-Oy-Auk" firstAttribute="centerX" secondItem="VG7-y9-Aiq" secondAttribute="centerX" id="eER-3w-AzJ"/>
-                            <constraint firstItem="Zc7-Zy-BAW" firstAttribute="top" secondItem="aA9-Ld-HsL" secondAttribute="bottom" constant="-3" id="gRh-i3-FP4"/>
-                            <constraint firstItem="qDV-Oy-Auk" firstAttribute="top" secondItem="VG7-y9-Aiq" secondAttribute="bottom" constant="-2" id="hfo-is-CiF"/>
-                            <constraint firstItem="7le-ga-QJo" firstAttribute="top" secondItem="X86-Re-h9Y" secondAttribute="bottom" constant="-1" id="mtf-1I-GfR"/>
-                            <constraint firstItem="xsW-Nx-PBQ" firstAttribute="leading" secondItem="GXN-X2-PRe" secondAttribute="leading" id="ohN-sn-v1G"/>
-                            <constraint firstItem="eDy-Qr-CrE" firstAttribute="top" secondItem="qDV-Oy-Auk" secondAttribute="bottom" constant="-3" id="sG7-r6-5yO"/>
-                            <constraint firstItem="aA9-Ld-HsL" firstAttribute="top" secondItem="bm2-C5-lNA" secondAttribute="bottom" constant="-3" id="u4E-bA-mMj"/>
-                            <constraint firstItem="zJE-cE-8Op" firstAttribute="top" secondItem="QU3-tA-Sjj" secondAttribute="top" constant="6" id="upK-vL-XkU"/>
-                            <constraint firstItem="bm2-C5-lNA" firstAttribute="top" secondItem="eDy-Qr-CrE" secondAttribute="bottom" constant="-4" id="w2h-rW-4ep"/>
-                            <constraint firstItem="bm2-C5-lNA" firstAttribute="centerX" secondItem="eDy-Qr-CrE" secondAttribute="centerX" constant="-2.5" id="xMl-52-H7I"/>
-                            <constraint firstItem="azp-fj-9BI" firstAttribute="centerX" secondItem="zJE-cE-8Op" secondAttribute="centerX" constant="-3" id="xgc-Gt-w7f"/>
-                            <constraint firstItem="7le-ga-QJo" firstAttribute="leading" secondItem="azp-fj-9BI" secondAttribute="leading" constant="-3" id="yTM-LY-mPi"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="QU3-tA-Sjj"/>
-                    </view>
-                </viewController>
+                <viewController id="uaS-Km-Wm8" customClass="StarWarsSpecieDetailViewController" customModule="StarWarsInfo" customModuleProvider="target" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dBl-zV-n6u" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-658.39999999999998" y="1692.5037481259371"/>
@@ -1345,7 +1230,6 @@
         <image name="GroupSpecies" width="100" height="98"/>
         <image name="GroupStarship" width="100" height="98"/>
         <image name="GroupVehicle" width="100" height="98"/>
-        <image name="images" width="265" height="199"/>
         <image name="star-wars-galaxy-of-heroes" width="414" height="318"/>
         <image name="star_wars_battlefront_2_2005_art_1536.0" width="375" height="667"/>
         <image name="star_wars_battlefront_2_2005_art_1536.0-1" width="413" height="246"/>
